--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="container">
     <h1>Yixuan Xiong</h1>
     <p>
-      Master’s student in Data Science and AI for the Creative Industries.  
+      Master’s student in Data Science and AI for the Creative Industries.<br>
       Passionate about building responsible, user-focused AI systems.  
       <br>
       <a href="mailto:xiongyixuan1006@gmail.com">xiongyixuan1006@gmail.com</a> | 
@@ -60,42 +60,42 @@
       <h3>Personalised Travel Advertisement System</h3>
       <p><strong>Tools:</strong> LLaMA3, DETR, Pillow, Ethics, UI | <strong>Role:</strong> Project Lead</p>
       <p>Led a 6-person team to develop a real-time AI-powered system that generates travel ads using multimodal inputs and ethical design.</p>
-      <a href="https://github.com/Yixuan-Xiong" target="_blank">View on GitHub</a>
+      <a href="personalised-travel-ad/">View Demo</a>
     </div>
 
     <div class="project">
       <h3>HAPPY OR SAD – Emotion Game for Autism Support</h3>
       <p><strong>Tools:</strong> Streamlit, MediaPipe, Cosine Similarity</p>
       <p>Created a real-time facial mimicry game to support emotional training for autistic children using facial landmark detection.</p>
-      <a href="https://github.com/Yixuan-Xiong" target="_blank">View on GitHub</a>
+      <a href="happy-or-sad/">Try Online</a>
     </div>
 
     <div class="project">
       <h3>Don’t Die – Ghost Hunting Game</h3>
       <p><strong>Tools:</strong> Python, NLTK, JSON, unittest</p>
       <p>Text-based deduction game using NLP to identify ghost types based on player input and logical feedback loops.</p>
-      <a href="https://github.com/Yixuan-Xiong" target="_blank">View on GitHub</a>
+      <a href="dont-die/">Play Game</a>
     </div>
 
     <div class="project">
       <h3>Data Analysis Project Series</h3>
       <p><strong>Tools:</strong> Pandas, Seaborn, Scikit-learn, UMAP</p>
       <p>Analysed datasets across music, wine, traffic, and nutrition to uncover social patterns through data science.</p>
-      <a href="https://github.com/Yixuan-Xiong" target="_blank">View on GitHub</a>
+      <a href="data-analysis/">View Analysis</a>
     </div>
 
     <div class="project">
       <h3>STEM Creative Coding Experiments</h3>
       <p><strong>Tools:</strong> OpenCV, Custom Libraries</p>
       <p>Built interactive prototypes with real-time input, including AR filters, animations, and visual music responses.</p>
-      <a href="https://github.com/Yixuan-Xiong" target="_blank">View on GitHub</a>
+      <a href="stem-coding/">Explore Demo</a>
     </div>
 
     <div class="project">
       <h3>Group Polarisation Interactive Installation</h3>
       <p><strong>Tools:</strong> Kinect, Processing, Motion Recognition</p>
       <p>Designed an immersive exhibition visualising social media-driven echo chambers using body-tracked interaction.</p>
-      <a href="https://github.com/Yixuan-Xiong" target="_blank">View on GitHub</a>
+      <a href="polarisation/">See Installation</a>
     </div>
 
     <div class="footer">
