--- a/index.html
+++ b/index.html
@@ -8,57 +8,101 @@
     body {
       font-family: 'Helvetica Neue', sans-serif;
       margin: 0;
-      padding: 2rem;
-      background: #ffffff;
+      padding: 0;
+      background: #f9f9f9;
       color: #111;
-      line-height: 1.6;
     }
-    h1, h2 {
-      color: #222;
+
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 2rem 1.5rem;
     }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.3rem;
+    }
+
+    h2 {
+      margin-top: 3rem;
+      font-size: 1.8rem;
+      border-bottom: 2px solid #eee;
+      padding-bottom: 0.4rem;
+    }
+
+    p {
+      margin: 0.4rem 0;
+    }
+
     a {
       color: #0066cc;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
-    .container {
-      max-width: 800px;
-      margin: auto;
+
+    .contact {
+      font-size: 0.95rem;
+      margin-bottom: 1.5rem;
     }
+
     .project {
-      margin-bottom: 2rem;
-      padding-bottom: 1rem;
-      border-bottom: 1px solid #eee;
+      background: #ffffff;
+      border-radius: 8px;
+      padding: 1.2rem 1.5rem;
+      margin-bottom: 1.5rem;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
     }
+
     .project h3 {
-      margin-bottom: 0.3rem;
+      margin: 0 0 0.3rem 0;
+      font-size: 1.3rem;
     }
+
+    .project p {
+      font-size: 0.95rem;
+    }
+
+    .project a {
+      display: inline-block;
+      margin-top: 0.6rem;
+      font-weight: 500;
+    }
+
     .footer {
-      margin-top: 3rem;
-      font-size: 0.9rem;
-      color: #666;
+      margin-top: 4rem;
+      font-size: 0.85rem;
+      color: #999;
       text-align: center;
+    }
+
+    @media screen and (max-width: 600px) {
+      h1 {
+        font-size: 2rem;
+      }
+      .project {
+        padding: 1rem;
+      }
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Yixuan Xiong</h1>
-    <p>
-      Master’s student in Data Science and AI for the Creative Industries.<br>
-      Passionate about building responsible, user-focused AI systems.  
-      <br>
-      <a href="mailto:xiongyixuan1006@gmail.com">xiongyixuan1006@gmail.com</a> | 
+    <p class="contact">
+      Master’s student in Data Science and AI for the Creative Industries. Passionate about building responsible, user-focused AI systems. <br>
+      <a href="mailto:xiongyixuan1006@gmail.com">xiongyixuan1006@gmail.com</a> &nbsp; | &nbsp; 
       <a href="https://github.com/Yixuan-Xiong" target="_blank">GitHub</a>
     </p>
 
-    <h2>Projects</h2>
+    <h2>Selected Projects</h2>
 
     <div class="project">
       <h3>Personalised Travel Advertisement System</h3>
-      <p><strong>Tools:</strong> LLaMA3, DETR, Pillow, Ethics, UI | <strong>Role:</strong> Project Lead</p>
+      <p><strong>Tools:</strong> LLaMA3, DETR, Pillow, Ethics, UI &nbsp; | &nbsp; <strong>Role:</strong> Project Lead</p>
       <p>Led a 6-person team to develop a real-time AI-powered system that generates travel ads using multimodal inputs and ethical design.</p>
       <a href="https://github.com/Yixuan-Xiong/personalised-travel-ad-generation-system" target="_blank">View on GitHub</a>
     </div>
