--- a/index.html
+++ b/index.html
@@ -102,43 +102,43 @@
 
     <div class="project">
       <h3>Personalised Travel Advertisement System</h3>
-      <p><strong>Tools:</strong> LLaMA3, DETR, Pillow, Ethics, UI &nbsp; | &nbsp; <strong>Role:</strong> Project Lead</p>
-      <p>Led a 6-person team to develop a real-time AI-powered system that generates travel ads using multimodal inputs and ethical design.</p>
+      <p><strong>Tools:</strong> Python, LLaMA3, DETR, Pillow, Stable Diffusion, UI &nbsp; | &nbsp; <strong>Role:</strong> Project Lead</p>
+      <p>Led a six-person team to design a system that creates AI-generated travel ads based on user profiles and destination images.</p>
       <a href="https://github.com/Yixuan-Xiong/personalised-travel-ad-generation-system" target="_blank">View on GitHub</a>
     </div>
 
     <div class="project">
-      <h3>HAPPY OR SAD – Emotion Game for Autism Support</h3>
-      <p><strong>Tools:</strong> Streamlit, MediaPipe, Cosine Similarity</p>
-      <p>Created a real-time facial mimicry game to support emotional training for autistic children using facial landmark detection.</p>
+      <h3>HAPPY OR SAD - Emotion Game for Autism Support</h3>
+      <p><strong>Tools:</strong> Python, Streamlit, MediaPipe, Cosine Similarity</p>
+      <p>Designed a facial expression game to support emotion recognition in autistic children, inspired by clinical research on emotion training.</p>
       <a href="https://github.com/Yixuan-Xiong/happy-or-sad-autism-game" target="_blank">View on GitHub</a>
     </div>
 
     <div class="project">
-      <h3>Don’t Die – Ghost Hunting Game</h3>
+      <h3>Don’t Die - Ghost Hunting Game</h3>
       <p><strong>Tools:</strong> Python, NLTK, JSON, unittest</p>
-      <p>Text-based deduction game using NLP to identify ghost types based on player input and logical feedback loops.</p>
+      <p>Created a text-based horror deduction game where players identify ghost types through flexible natural language input.</p>
       <a href="https://github.com/Yixuan-Xiong/dont-die-ghost-game" target="_blank">View on GitHub</a>
     </div>
 
     <div class="project">
       <h3>Data Analysis Project Series</h3>
-      <p><strong>Tools:</strong> Pandas, Seaborn, Scikit-learn, UMAP</p>
-      <p>Analysed datasets across music, wine, traffic, and nutrition to uncover social patterns through data science.</p>
+      <p><strong>Tools:</strong> Python, Pandas, Seaborn, Plotly, API, Scikit-learn, UMAP</p>
+      <p>Conducted four separate data investigations to explore behavioural, cultural, and public safety patterns using real-world datasets.</p>
       <a href="https://github.com/Yixuan-Xiong/data-analysis-projects" target="_blank">View on GitHub</a>
     </div>
 
     <div class="project">
       <h3>STEM Creative Coding Experiments</h3>
-      <p><strong>Tools:</strong> OpenCV, Custom Libraries</p>
-      <p>Built interactive prototypes with real-time input, including AR filters, animations, and visual music responses.</p>
+      <p><strong>Tools:</strong> Python, OpenCV, Dot Library</p>
+      <p>Explored interactive and visual computation through a series of creative coding prototypes combining logic and real-time input.</p>
       <a href="https://github.com/Yixuan-Xiong/stem-creative-coding" target="_blank">View on GitHub</a>
     </div>
 
     <div class="project">
       <h3>Group Polarisation Interactive Installation</h3>
-      <p><strong>Tools:</strong> Kinect, Processing, Motion Recognition</p>
-      <p>Designed an immersive exhibition visualising social media-driven echo chambers using body-tracked interaction.</p>
+      <p><strong>Tools:</strong> Processing, Kinect, OpenCV, Motion Recognition, Physical Installation</p>
+      <p>Designed and built an immersive installation to visualise how social media echo chambers and filter bubbles drive group polarisation.</p>
       <a href="https://github.com/Yixuan-Xiong/group-polarization-interactive-system" target="_blank">View on GitHub</a>
     </div>
 
