--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
   <div class="container">
     <h1>Yixuan Xiong</h1>
     <p class="contact">
-      Master’s student in Data Science and AI for the Creative Industries. Passionate about building responsible, user-focused AI systems. <br>
+      A creative and analytical Master’s student with a strong foundation in AI, data science, and media technology. Skilled in Python, data analysis, computer vision, and ethical generative systems. Experienced in delivering user-focused solutions across creative and social contexts through both individual and team-based projects. Passionate about building responsible and impactful technologies that connect innovation with real-world needs. <br>
       <a href="mailto:xiongyixuan1006@gmail.com">xiongyixuan1006@gmail.com</a> &nbsp; | &nbsp; 
       <a href="https://github.com/Yixuan-Xiong" target="_blank">GitHub</a>
     </p>
 
-    <h2>Selected Projects</h2>
+    <h2>Projects</h2>
 
     <div class="project">
       <h3>Personalised Travel Advertisement System</h3>
