--- a/index.html
+++ b/index.html
@@ -1,75 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Yixuan Xiong – AI & Data Science Projects</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
       font-family: 'Helvetica Neue', sans-serif;
       margin: 0;
       padding: 0;
-      background: #f9f9f9;
-      color: #111;
+      background: #f5f5f5;
+      color: #222;
     }
 
     .container {
-      max-width: 900px;
+      max-width: 960px;
       margin: auto;
       padding: 2rem 1.5rem;
     }
 
     h1 {
-      font-size: 2.5rem;
+      font-size: 2.4rem;
       margin-bottom: 0.3rem;
+      color: #2c3e50;
     }
 
     h2 {
       margin-top: 3rem;
-      font-size: 1.8rem;
-      border-bottom: 2px solid #eee;
+      font-size: 1.6rem;
+      border-bottom: 1px solid #ccc;
       padding-bottom: 0.4rem;
-    }
-
-    p {
-      margin: 0.4rem 0;
-    }
-
-    a {
-      color: #0066cc;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    .contact {
-      font-size: 0.95rem;
-      margin-bottom: 1.5rem;
+      color: #333;
     }
 
     .project {
       background: #ffffff;
-      border-radius: 8px;
+      border-radius: 6px;
       padding: 1.2rem 1.5rem;
       margin-bottom: 1.5rem;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.04);
     }
 
     .project h3 {
-      margin: 0 0 0.3rem 0;
-      font-size: 1.3rem;
+      margin: 0 0 0.4rem 0;
+      font-size: 1.2rem;
+      color: #111;
     }
 
     .project p {
       font-size: 0.95rem;
+      color: #444;
+      margin: 0.3rem 0;
     }
 
     .project a {
       display: inline-block;
       margin-top: 0.6rem;
       font-weight: 500;
+      color: #0066cc;
+      text-decoration: none;
+    }
+
+    .project a:hover {
+      text-decoration: underline;
     }
 
     .footer {
@@ -77,6 +70,12 @@
       font-size: 0.85rem;
       color: #999;
       text-align: center;
+    }
+
+    .contact {
+      font-size: 0.95rem;
+      margin-bottom: 1.5rem;
+      line-height: 1.6;
     }
 
     @media screen and (max-width: 600px) {
@@ -93,13 +92,12 @@
   <div class="container">
     <h1>Yixuan Xiong</h1>
     <p class="contact">
-      A creative and analytical Master’s student with a strong foundation in AI, data science, and media technology. Skilled in Python, data analysis, computer vision, and ethical generative systems. Experienced in delivering user-focused solutions across creative and social contexts through both individual and team-based projects. Passionate about building responsible and impactful technologies that connect innovation with real-world needs. <br>
-      <a href="mailto:xiongyixuan1006@gmail.com">xiongyixuan1006@gmail.com</a> &nbsp; | &nbsp; 
+      A creative and analytical Master’s student with a strong foundation in AI, data science, and media technology. Skilled in Python, data analysis, computer vision, and ethical generative systems. Experienced in delivering user-focused solutions across creative and social contexts through both individual and team-based projects. Passionate about building responsible and impactful technologies that connect innovation with real-world needs. <br />
+      <a href="mailto:xiongyixuan1006@gmail.com">xiongyixuan1006@gmail.com</a> &nbsp; | &nbsp;
       <a href="https://github.com/Yixuan-Xiong" target="_blank">GitHub</a>
     </p>
 
-    <h2>Projects</h2>
-
+    <h2>AI & Generative Systems</h2>
     <div class="project">
       <h3>Personalised Travel Advertisement System</h3>
       <p><strong>Tools:</strong> Python, LLaMA3, DETR, Pillow, Stable Diffusion, UI &nbsp; | &nbsp; <strong>Role:</strong> Project Lead</p>
@@ -107,6 +105,7 @@
       <a href="https://github.com/Yixuan-Xiong/personalised-travel-ad-generation-system" target="_blank">View on GitHub</a>
     </div>
 
+    <h2>Games & Human Interaction</h2>
     <div class="project">
       <h3>HAPPY OR SAD - Emotion Game for Autism Support</h3>
       <p><strong>Tools:</strong> Python, Streamlit, MediaPipe, Cosine Similarity</p>
@@ -122,24 +121,26 @@
     </div>
 
     <div class="project">
+      <h3>Group Polarisation Interactive Installation</h3>
+      <p><strong>Tools:</strong> Processing, Kinect, OpenCV, Motion Recognition, Physical Installation</p>
+      <p>Designed and built an immersive installation to visualise how social media echo chambers and filter bubbles drive group polarisation.</p>
+      <a href="https://github.com/Yixuan-Xiong/group-polarization-interactive-system" target="_blank">View on GitHub</a>
+    </div>
+
+    <h2>Data Analysis & Research</h2>
+    <div class="project">
       <h3>Data Analysis Project Series</h3>
       <p><strong>Tools:</strong> Python, Pandas, Seaborn, Plotly, API, Scikit-learn, UMAP</p>
       <p>Conducted four separate data investigations to explore behavioural, cultural, and public safety patterns using real-world datasets.</p>
       <a href="https://github.com/Yixuan-Xiong/data-analysis-projects" target="_blank">View on GitHub</a>
     </div>
 
+    <h2>Creative Technology</h2>
     <div class="project">
       <h3>STEM Creative Coding Experiments</h3>
       <p><strong>Tools:</strong> Python, OpenCV, Dot Library</p>
       <p>Explored interactive and visual computation through a series of creative coding prototypes combining logic and real-time input.</p>
       <a href="https://github.com/Yixuan-Xiong/stem-creative-coding" target="_blank">View on GitHub</a>
-    </div>
-
-    <div class="project">
-      <h3>Group Polarisation Interactive Installation</h3>
-      <p><strong>Tools:</strong> Processing, Kinect, OpenCV, Motion Recognition, Physical Installation</p>
-      <p>Designed and built an immersive installation to visualise how social media echo chambers and filter bubbles drive group polarisation.</p>
-      <a href="https://github.com/Yixuan-Xiong/group-polarization-interactive-system" target="_blank">View on GitHub</a>
     </div>
 
     <div class="footer">
