--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       padding: 1.2rem 1.5rem;
       margin-bottom: 1.5rem;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.04);
+      border-left: 4px solid #ccc;
     }
 
     .project h3 {
@@ -107,14 +108,14 @@
 
     <h2>Games & Human Interaction</h2>
     <div class="project">
-      <h3>HAPPY OR SAD - Emotion Game for Autism Support</h3>
+      <h3>HAPPY OR SAD – Emotion Game for Autism Support</h3>
       <p><strong>Tools:</strong> Python, Streamlit, MediaPipe, Cosine Similarity</p>
       <p>Designed a facial expression game to support emotion recognition in autistic children, inspired by clinical research on emotion training.</p>
       <a href="https://github.com/Yixuan-Xiong/happy-or-sad-autism-game" target="_blank">View on GitHub</a>
     </div>
 
     <div class="project">
-      <h3>Don’t Die - Ghost Hunting Game</h3>
+      <h3>Don’t Die – Ghost Hunting Game</h3>
       <p><strong>Tools:</strong> Python, NLTK, JSON, unittest</p>
       <p>Created a text-based horror deduction game where players identify ghost types through flexible natural language input.</p>
       <a href="https://github.com/Yixuan-Xiong/dont-die-ghost-game" target="_blank">View on GitHub</a>
