--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 
     <h2>Games & Human Interaction</h2>
     <div class="project">
-      <h3>HAPPY OR SAD – Emotion Game for Autism Support</h3>
-      <p><strong>Tools:</strong> Python, Streamlit, MediaPipe, Cosine Similarity</p>
-      <p>Designed a facial expression game to support emotion recognition in autistic children, inspired by clinical research on emotion training.</p>
-      <a href="https://github.com/Yixuan-Xiong/happy-or-sad-autism-game" target="_blank">View on GitHub</a>
+      <h3>Designing Age-Specific Interactive Games for Children with Autism Spectrum Disorder: A Therapy-Informed Approach</h3>
+      <p><strong>Tools:</strong>  Python, Streamlit, Pandas, NumPy, Pillow, Altair, OpenCV, Mediapipe, streamlit-sortables, dorothy, acids-rave</p>
+      <p>Developed a browser-based digital hub with 9 interactive therapy-aligned games and 2 clinician tools, designed to support autistic children in practising everyday skills.</p>
+      <a href="https://github.com/Yixuan-Xiong/Interactive-games-designed-for-children-with-autism-based-on-therapeutic-principles" target="_blank">View on GitHub</a>
     </div>
 
     <div class="project">
