--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </div>
 
     <div class="project">
-      <h3>Don’t Die – Ghost Hunting Game</h3>
+      <h3>Don’t Die - Ghost Hunting Game</h3>
       <p><strong>Tools:</strong> Python, NLTK, JSON, unittest</p>
       <p>Created a text-based horror deduction game where players identify ghost types through flexible natural language input.</p>
       <a href="https://github.com/Yixuan-Xiong/dont-die-ghost-game" target="_blank">View on GitHub</a>
